[tool.poetry]
name = "py_ball"
version = "0.1.0"
description = ""
authors = ["Patrick Fenerty <patrick@fenerty.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
